--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -22,3 +22,12 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+index.html
+eslint.config.js
+package-lock.json 
+package.json 
+tsconfig.json 
+tsconfig.node.json 
+vite.config.ts 
+tsconfig.app.json 
